--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
   vertical-align: baseline;
   font-family: Arial, sans-serif;
+  margin: 0;
 }
 
 /*header*/
@@ -44,12 +45,16 @@ header .button1{
 
 /*section*/
 
+section{
+  width: 100%;
+  height: 575px;
+}
+
 .google, .search, .link{
  display: flex;
  position: fixed;
  align-items: center;
  justify-content: center;
- width: 100%;
 }
 
 .google{
@@ -61,7 +66,7 @@ header .button1{
 }
 
 .link{
-  height: 100%;
+  margin-top: 3.5em;
 }
 
 .search input[type="text"]{
@@ -116,4 +121,11 @@ header .button1{
 
 #e{
   color: #FF1000;
+}
+
+footer{
+  width: 100%;
+  height: 50px;
+  margin: auto;
+  background: #EDEDED;
 }
